# C-4-Remote

./: .gitignore  README.md  main.py  pyproject.toml
Problems/: dicerolls.c4  double.c4  end.c4  img.c4  img_loading_test.c4  imgtest.c4  newtest.c4  problem.c4  secret.c4  utility.c4  yoyo.c4
static/css/: base.css  create.css  problems.css
static/js/: create.js  login.js  problems.js
templates/: base.html  create.html  index.html  login.html  logout.html  problems.html
